infra/k8s/comments-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: comments
spec:
  type: ClusterIP
  selector:
    app: comments
  ports:
  - name: comments
    protocol: TCP
    port: 4000
    targetPort: 4000
