infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
      - name: event-bus
EOF targetPort: 5000vaml << 'EOF's
agnes@agnes-oop-vs24:~/Documents/React/monoliitrakendus/infra/k8s$ kubectl apply -f event-bus-depl.yaml
kubectl apply -f event-bus-srv.yaml
deployment.apps/event-bus-depl created
service/event-bus-srv created
agnes@agnes-oop-vs24:~/Documents/React/monoliitrakendus/infra/k8s$ ^[[200~cat > comments-depl.yaml << 'EOF'
> apiVersion: apps/v1
> kind: Deployment
> metadata:
>   name: comments-depl
> spec:
>   replicas: 1
>   selector:
>     matchLabels:
>       app: comments
>   template:
>     metadata:
>       labels:
>         app: comments
>     spec:
>       containers:
>       - name: comments
>         image: agnestiit/comments
> EOF
aml << 'EOF'
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  type: ClusterIP
  selector:
    app: comments
  ports:
  - name: comments
    protocol: TCP
    port: 4000
    targetPort: 4000
EOF^[[201~cat: command not found
agnes@agnes-oop-vs24:~/Documents/React/monoliitrakendus/infra/k8s$ 
agnes@agnes-oop-vs24:~/Documents/React/monoliitrakendus/infra/k8s$ cat > comments-srv.yaml << 'EOF'
> apiVersion: v1
> kind: Service
> metadata:
>   name: comments-srv
> spec:
>   type: ClusterIP
>   selector:
>     app: comments
>   ports:
>   - name: comments
>     protocol: TCP
>     port: 4000
>     targetPort: 4000
> EOF~
> ^C
agnes@agnes-oop-vs24:~/Documents/React/monoliitrakendus/infra/k8s$ cat > comments-depl.yaml << 'EOF'
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
      - name: comments
        image: agnestiit/comments
