infra/k8s/moderation-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: moderation
spec:
  type: ClusterIP
  selector:
    app: moderation
  ports:
  - name: moderation
    protocol: TCP
    port: 5002
    targetPort: 5002
