infra/k8s/query-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: query
spec:
  type: ClusterIP
  selector:
    app: query
  ports:
  - name: query
    protocol: TCP
    port: 5003
    targetPort: 5003
