infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - blog.local
    secretName: blog-tls
  rules:
  - host: blog.local
    http:
      paths:
      - path: /api/posts
        pathType: Prefix
        backend:
          service:
            name: posts
            port:
              number: 3050
      - path: /posts/?(.*)/comments
        pathType: ImplementationSpecific
        backend:
          service:
            name: comments
            port:
              number: 4000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: query
            port:
              number: 5003
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client
            port:
              number: 3000
